# CSL

./: .gitignore  CITATION.cff  LICENSE  Makefile  PUSH_INSTRUCTIONS.md  README.md  REPRODUCIBILITY.md  bootstrap_repo.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default_params.json  scales.json
credibility/: __init__.py  confidence.py  config.py  ddm.py  meanfield.py  metrics.py  model.py  network.py  scenarios.py  uncertainty.py
paper/: endogenous_credibility.bib  endogenous_credibility.tex
paper/figures/: fig10_neuromap.tex  fig11_experiment.tex  fig1_mechanism.tex  fig_plasticity.tex
paper/tables/: endogenous_early_lead.csv  results_table.tex  robustness_horizon.csv  robustness_initial_conditions.csv  robustness_random_graphs.csv  robustness_reward_gap.csv  robustness_thresholds.csv  table_code_map.tex  table_default_params.tex  table_robustness.tex  table_scenarios.tex
reports/: AB_comments_audit.md
scripts/: common.py  make_dynamics_figures.py  make_figures.py  make_neuro_figures.py  make_tables.py  plotstyle.py  run_ablations.py  run_all.py  run_baseline.py  run_confidence.py  run_early_lead.py  run_phase.py  run_quotient.py  run_robustness.py
tests/: conftest.py  test_credibility.py
